--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,12 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.80"
+bit-set = "0.5.3"
 bytes = "1.6.0"
 clap = { version = "4.5.2", features = ["derive"] }
 flate2 = { version = "1.0.28", features = ["zlib-ng"], default-features = false }
 log = "0.4.21"
+num-bigint = "0.4.4"
 reqwest = {version = "0.12.2", features = ["blocking"]}
 sha1 = "0.10.6"
 simple_logger = "4.3.3"
