--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 anyhow = "1.0.80"
 bit-set = "0.5.3"
 bytes = "1.6.0"
+chrono = "0.4.37"
+chrono-tz = "0.9.0"
 clap = { version = "4.5.2", features = ["derive"] }
 flate2 = { version = "1.0.28", features = ["zlib-ng"], default-features = false }
 log = "0.4.21"
