--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ chrono = "0.4.37"
 chrono-tz = "0.9.0"
 clap = { version = "4.5.2", features = ["derive"] }
 flate2 = { version = "1.0.28", features = ["zlib-ng"], default-features = false }
+hex = "0.4.3"
 log = "0.4.21"
 num-bigint = "0.4.4"
 reqwest = {version = "0.12.2", features = ["blocking"]}
